<resources>
    <string name="app_name">MyToDo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_priority">Set Priority</string>
    <string name="priority">priority</string>
    <string name="due_date">Due Date</string>
    <string name="create_task">Create Task</string>
    <string name="due">Due : %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account | Sign Up</string>
    <string name="remote_todo">Remote Todo</string>
    <string name="all">All</string>
    <string name="over_due">Over Due</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="user">user</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_have_an_account_login">Already have an account | Login</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="restore_task">Restore Task</string>
    <string name="are_you_sure_to_delete_task">Are you sure to delete Task?</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="recyclebin">RecycleBin</string>
    <string name="profile">Profile</string>
    <string name="other_features">Other Features</string>
    <string name="camera_feature">Camera Feature</string>
    <string name="media_player_feature">Media Player Feature</string>
    <string name="services_example">Services Example</string>
    <string name="sensors_example">Sensors Example</string>
    <string name="connectivity_wifi_bt">Connectivity WIFI/BT</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_gallery">Media Gallery</string>
    <string name="beta_testing">Beta Testing</string>
    <string name="no_pending_tasks">No pending tasks</string>
    <string name="no_overdue_tasks">No overdue tasks</string>
    <string name="no_tasks_marked_as_completed">No tasks marked as completed</string>
    <string name="no_tasks_found">No tasks found</string>
    <string name="your_recycle_bin_is_empty">Your Recycle Bin is empty</string>


</resources>